--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -7,11 +7,26 @@ html {
 body {
     min-height: 100%;
     min-width: 100%;
-    background: linear-gradient(azure, rgb(130, 215, 248), rgb(35, 4, 4))
+    background-color: linear-gradient(azure, rgb(130, 215, 248), white);
 }
 
 button {
     font-size: 7px;
+}
+
+#main-form{
+    margin: 50px;
+    position: center;
+    width: 33%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border: 3px solid #333;
+    background: rgba(255,255,255, 0.75);
+    padding: 15px 20px 18px 18px;
+    border-radius: 10px;
+    box-shadow: 2px 5px 5px rgb(160, 159, 159);
 }
 
 #main-content {
@@ -22,7 +37,7 @@ button {
     align-items: center;
     flex-direction: column;
     border: 1px solid #333;
-    background: rgba(255,255,255, 0.3);
+    background: rgba(255,255,255, 0.75);
     padding: 15px 20px 18px 18px;
     border-radius: 10px;
     box-shadow: 2px 5px 5px rgb(160, 159, 159);
