--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -34,7 +34,7 @@ button {
     border: 2px solid #333;
     color:#9be5aa;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: larger;
+    font-size: 20pt;
     text-shadow: 3px 3px 3px black;
     background-image: url(../img/myWhirlpool1.jpg);
     background-size: 100%;
@@ -45,6 +45,12 @@ button {
     box-shadow: 2px 5px 5px rgb(131, 131, 131);
 }
 
+#epitaph{
+    font-style: italic;
+    font-size: small;
+    padding: 10px;
+    display: flex;
+}
 
 #ageInMonths{
     margin: 10px;
@@ -54,6 +60,7 @@ button {
     background: rgba(255,255,255, 0.75);
     padding: 10px 20px 20px 30px;
     border-radius: 10px;
+    text-shadow: 0px 0px 1px #b8b8b8;
     box-shadow: 2px 5px 5px rgb(160, 159, 159);
 }
 
@@ -61,7 +68,7 @@ button {
     margin-left: 15px;
     text-align: left;
     width: 33%;
-    text-shadow: 2px 2px 2px #b8b8b8;
+    text-shadow: 0px 0px 1px #b8b8b8;
 
 }
 
@@ -87,13 +94,30 @@ button {
     box-shadow: 2px 5px 5px rgb(160, 159, 159);
 }
 
+
+
 #activity {
     width: 60%; 
+    font-size: larger;
+    font-weight: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: auto; 
     border: 1px solid #333;
     background: rgba(255,255,255,0.75);
     padding: 15px 20px 18px 18px;
     border-radius: 10px;
+    text-shadow: 0px 0px 1px #b8b8b8;
+    box-shadow: 2px 5px 5px rgb(160, 159, 159);
+}
+
+#plans {
+    width: 80%;
+    margin: auto; 
+    border: 1px solid #333;
+    background: rgba(255,255,255,0.75);
+    padding: 15px 15px 15px 15px; 
+    border-radius: 10px;
+    text-shadow: 0px 0px 1px #b8b8b8;
     box-shadow: 2px 5px 5px rgb(160, 159, 159);
 }
 
@@ -114,6 +138,7 @@ button {
     background: rgba(255,255,255,0.75);
     padding: 15px 20px 18px 18px;
     border-radius: 10px;
+    text-shadow: 0px 0px 1px #b8b8b8;
     box-shadow: 2px 5px 5px rgb(160, 159, 159);
     resize: none;
 }
