--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -99,8 +99,8 @@ button {
 #activity {
     width: 60%; 
     font-size: larger;
-    font-weight: bold;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: italic;
+    font-family:'Courier New', Courier, monospace;
     margin: auto; 
     border: 1px solid #333;
     background: rgba(255,255,255,0.75);
@@ -113,7 +113,7 @@ button {
 #plans {
     width: 80%;
     margin: auto; 
-    border: 1px solid #333;
+
     background: rgba(255,255,255,0.75);
     padding: 15px 15px 15px 15px; 
     border-radius: 10px;
