--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,17 +1,31 @@
 html {
     height: 100%;
     width: 100%;
+}
+
+:root {
     font-family: "Titillium Web", sans-serif;
+    color: black;
+    background: whitesmoke;
+}
+
+.darkmode {
+    font-family: "Titillium Web", sans-serif;
+    color: whitesmoke;
+    background: rgb(50, 50, 50);
 }
 
 body {
     min-height: 100%;
     min-width: 100%;
-    background: whitesmoke;
 }
 
 button {
-    font-size: 7px;
+    font-size: 14px;
+}
+
+#blog-link{
+    background-color: rgba(217, 217, 217, 0.6)
 }
 
 #container {
@@ -25,14 +39,12 @@ button {
 #header {
     width: 90%;
     margin: auto;
-    position: relative;
+    position: relative; 
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex: 1;
-    flex-direction: column;
+    flex-direction: column; 
     border: 2px solid #333;
-    color:#9be5aa;
+    color:#76f28f;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 20pt;
     text-shadow: 3px 3px 3px black;
@@ -45,17 +57,20 @@ button {
     box-shadow: 2px 5px 5px rgb(131, 131, 131);
 }
 
+#dark-mode-toggle {
+    margin-left: 80%;
+}
 
 #ageInMonths{
     margin: 10px;
     width: 33%;
     flex-direction: column;
     border: 3px solid #333;
-    background: rgba(255,255,255, 0.75);
+    background: rgba(255,255,255, 0.50);
     padding: 10px 20px 20px 30px;
     border-radius: 10px;
     text-shadow: 0px 0px 1px #b8b8b8;
-    box-shadow: 2px 5px 5px rgb(160, 159, 159);
+    box-shadow: 2px 5px 5px rgb(160, 159, 159, .50);
 }
 
 #about{
@@ -71,20 +86,20 @@ button {
     width: 70%;
     margin: auto; 
     border: 1px solid #333;
-    background: rgba(255,255,255,0.75);
+    background: rgba(255,255,255,0.50);
     padding: 15px 20px 18px 18px;
     border-radius: 10px;
-    box-shadow: 2px 5px 5px rgb(160, 159, 159);
+    box-shadow: 2px 5px 5px rgb(160, 159, 159, .50);
 }
 
 #reminders {
     width: 70%;
     margin: auto; 
     border: 1px solid #333;
-    background: rgba(255,255,255,0.75);
+    background: rgba(255,255,255,0.50);
     padding: 15px 20px 18px 18px;
     border-radius: 10px;
-    box-shadow: 2px 5px 5px rgb(160, 159, 159);
+    box-shadow: 2px 5px 5px rgb(160, 159, 159, .50);
 }
 
 
@@ -96,28 +111,26 @@ button {
     font-family:'Courier New', Courier, monospace;
     margin: auto; 
     border: 1px solid #333;
-    background: rgba(255,255,255,0.75);
+    background: rgba(255,255,255,0.50);
     padding: 15px 20px 18px 18px;
     border-radius: 10px;
     text-shadow: 0px 0px 1px #b8b8b8;
-    box-shadow: 2px 5px 5px rgb(160, 159, 159);
-}
+    box-shadow: 2px 5px 5px rgb(160, 159, 159, .50);}
 
 #plans {
     width: 70%;
     margin: auto; 
-    background: rgba(255,255,255,0.75);
+    background: rgba(255,255,255,0.50);
     padding: 15px 15px 15px 15px; 
     border-radius: 10px;
     text-shadow: 0px 0px 1px #b8b8b8;
-    box-shadow: 2px 5px 5px rgb(160, 159, 159);
-}
+    box-shadow: 2px 5px 5px rgb(160, 159, 159, .50);}
 
 #subtitles {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 20pt;
     font-style: italic;
-    color:#9be5aa;
+    color:#76f28f;
     text-shadow: 1px 1px 2px #000000;
     justify-items: right;
 
@@ -127,11 +140,11 @@ button {
     width: 70%;
     margin: auto; 
     border: 1px solid #333;
-    background: rgba(255,255,255,0.75);
+    background: rgba(255,255,255,0.50);
     padding: 15px 20px 18px 18px;
     border-radius: 10px;
     text-shadow: 0px 0px 1px #b8b8b8;
-    box-shadow: 2px 5px 5px rgb(160, 159, 159);
+    box-shadow: 2px 5px 5px rgb(160, 159, 159, .50);
     resize: none;
 }
 
@@ -139,8 +152,7 @@ button {
     width: 70%;
     margin: auto; 
     border: 1px solid #333;
-    background: rgba(255,255,255,0.75);
+    background: rgba(255,255,255,0.50);
     padding: 15px 20px 18px 18px;
     border-radius: 10px;
-    box-shadow: 2px 5px 5px rgb(160, 159, 159);
-}
+    box-shadow: 2px 5px 5px rgb(160, 159, 159, .50);}
